# lab05

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_build/banking/: Makefile  cmake_install.cmake
banking/: CMakeLists.txt
banking/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
banking/tests/: CMakeLists.txt  test1.cpp
tests/: test1.cpp
